debug: add secret_view to check api

--- a/lib/completer/views/secret_view.slim
+++ b/lib/completer/views/secret_view.slim
@@ -1,1 +1,32 @@
-p install repo
+h2 Install repos
+
+form#submit-repos
+  p
+    | repo1: 
+    input name="repo1"
+  p
+    | repo2: 
+    input name="repo2"
+  p
+    | repo3: 
+    input name="repo3"
+  p
+    button.submit Install
+
+hr
+
+h2 Complete keyword
+
+form#complete
+  p
+    | text: 
+    input.keyword
+  p
+    button.submit Complete
+  p
+    | result: 
+    input.result
+
+script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+script src="/test.js"
+link rel="stylesheet" href="/test.css"
